// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageBar /> with a type matches its snapshot 1`] = `
<Block
  className=
      y-message-bar
      {
        background-color: rgb(243,245,248);
        border-color: rgb(255,197,108);
        border-left-width: 4px;
        border-radius: 1px;
        border: solid 0 rgb(168,176,189);
        color: rgb(52,58,65);
        padding-bottom: 8px;
        padding-left: 12px;
        padding-right: 12px;
        padding-top: 7px;
      }
  textSize="small"
>
  <FixedGridRow
    gutterSize="xxLarge"
  >
    <FixedGridColumn>
      content
    </FixedGridColumn>
  </FixedGridRow>
</Block>
`;

exports[`<MessageBar /> with actions matches its snapshot 1`] = `
<Block
  className=
      y-message-bar
      {
        background-color: rgb(243,245,248);
        border-left-width: 4px;
        border-radius: 1px;
        border: solid 0 rgb(168,176,189);
        color: rgb(52,58,65);
        padding-bottom: 8px;
        padding-left: 12px;
        padding-right: 12px;
        padding-top: 7px;
      }
  textSize="small"
>
  <FixedGridRow
    gutterSize="xxLarge"
  >
    <FixedGridColumn>
      content
    </FixedGridColumn>
    <FixedGridColumn
      className=

          {
            white-space: nowrap;
          }
      fixed={true}
    >
      <FakeLink>
        Link
      </FakeLink>
    </FixedGridColumn>
  </FixedGridRow>
</Block>
`;

exports[`<MessageBar /> with additional className matches its snapshot 1`] = `
<Block
  className=
      y-message-bar
      TEST_CLASSNAME
      {
        background-color: rgb(243,245,248);
        border-left-width: 4px;
        border-radius: 1px;
        border: solid 0 rgb(168,176,189);
        color: rgb(52,58,65);
        padding-bottom: 8px;
        padding-left: 12px;
        padding-right: 12px;
        padding-top: 7px;
      }
  textSize="small"
>
  <FixedGridRow
    gutterSize="xxLarge"
  >
    <FixedGridColumn>
      content
    </FixedGridColumn>
  </FixedGridRow>
</Block>
`;

exports[`<MessageBar /> with default options matches its snapshot 1`] = `
<Block
  className=
      y-message-bar
      {
        background-color: rgb(243,245,248);
        border-left-width: 4px;
        border-radius: 1px;
        border: solid 0 rgb(168,176,189);
        color: rgb(52,58,65);
        padding-bottom: 8px;
        padding-left: 12px;
        padding-right: 12px;
        padding-top: 7px;
      }
  textSize="small"
>
  <FixedGridRow
    gutterSize="xxLarge"
  >
    <FixedGridColumn>
      content
    </FixedGridColumn>
  </FixedGridRow>
</Block>
`;
